--- a/privacy-engineer.html
+++ b/privacy-engineer.html
@@ -51,11 +51,11 @@
 <p><span class="badge badge-light">Toronto, ON</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/idpeducationpty/jobs/privacy-specialist-dfEU9s9Ker6ARKaKiznY58'>Privacy Specialist #1136 job at IDP Education Ltd in Melbourne City, Victoria, Australia, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/idpeducationpty/jobs/privacy-specialist-dfEU9s9Ker6ARKaKiznY58'>Privacy Specialist #1136 job at IDP Education Ltd in Melbourne City, Victoria, Australia, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Melbourne Australia Melbourne Australia Melbourne</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=opkdafwQ&__jvst=Employee+Referral&__jvsd=stnrHhwK&__jvsc=Twitter&bid=nfSljMw2'>ServiceNow Careers - Privacy Analyst</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=opkdafwQ&__jvst=Employee+Referral&__jvsd=stnrHhwK&__jvsc=Twitter&bid=nfSljMw2'>ServiceNow Careers - Privacy Analyst</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
@@ -120,7 +120,7 @@ application. Resume/CV ?. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">Washington, District of Columbia  San Francisco, California  Los Angeles, California  Atlanta, Georgia  Seattle, Washington  Philadelphia, Pennsylvania  Chicago, Illinois  Los Angeles, California  New York, New York</span></p>
 <p>Posted on: 2019-10-04</p>
 <hr/>
-<h5><a href='https://adobe.wd5.myworkdayjobs.com/en-US/external_experienced/job/San-Francisco/Privacy--Trust---Safety-Legal-Policy-Specialist_79790'>Privacy, Trust & Safety Legal Policy Specialist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://adobe.wd5.myworkdayjobs.com/en-US/external_experienced/job/San-Francisco/Privacy--Trust---Safety-Legal-Policy-Specialist_79790'>Privacy, Trust & Safety Legal Policy Specialist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Sep 18, 2019 ... At Adobe, you'll join our Legal Privacy, Trust & Safety team. We're seeking a 
 passionate, collaborative, and thoughtful legal specialist, who has prior 
@@ -162,7 +162,7 @@ experience?...</p>
 <p><span class="badge badge-light">Philadelphia, Pennsylvania</span></p>
 <p>Posted on: 2019-09-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=opkdafwQ&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nFJiJLwF'>ServiceNow Careers - Privacy Analyst</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=opkdafwQ&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nFJiJLwF'>ServiceNow Careers - Privacy Analyst</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-09-18</p>
 <hr/>
@@ -206,7 +206,7 @@ trust?...</p>
 <p><span class="badge badge-light">San Francisco Mountain View</span></p>
 <p>Posted on: 2019-09-05</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/mozilla/jobs/1826563'>Job Application for Sr. Differential Privacy Research Engineer at Mozilla</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/mozilla/jobs/1826563'>Job Application for Sr. Differential Privacy Research Engineer at Mozilla</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA Sugar Land, TX</span></p>
 <p>Posted on: 2019-09-05</p>
 <hr/>
@@ -218,7 +218,7 @@ trust?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-04</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/palantir/e269dfeb-f150-4826-a39e-05afa9d11da2'>Palantir Technologies - Privacy and Civil Liberties Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/palantir/e269dfeb-f150-4826-a39e-05afa9d11da2'>Palantir Technologies - Privacy and Civil Liberties Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-04</p>
 <hr/>
@@ -266,7 +266,7 @@ CA &amp; Sugar Land, TX: perform research into data obfuscation methods for?...<
 <p>3 days ago ... Collaborate with senior Privacy team members to review and mitigate privacy 
 and data protection risks in connection with Everlaw's products, services, and?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/softrams/4a85d547-50ee-4c60-8096-1ad038ec006b'>Softrams - Security/Privacy Assurance Analyst</a></h5> 
+<h5><a href='https://jobs.lever.co/softrams/4a85d547-50ee-4c60-8096-1ad038ec006b'>Softrams - Security/Privacy Assurance Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-04</p>
 <hr/>
@@ -282,7 +282,7 @@ and data protection risks in connection with Everlaw's products, services, and?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/geotab/b91a4c3b-105c-4a48-90e4-436ecfbc28c3'>Geotab - Data Privacy Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/geotab/b91a4c3b-105c-4a48-90e4-436ecfbc28c3'>Geotab - Data Privacy Engineer</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -393,7 +393,7 @@ Core Business Services. Requisition #: GLO000QQ. Knowledge Manager?...</p>
 industry, with a career where you will have the opportunity to collaborate and 
 affect?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/sumologic/jobs/1671975'>Job Application for Security, Compliance and Privacy Analyst at Sumo Logic</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sumologic/jobs/1671975'>Job Application for Security, Compliance and Privacy Analyst at Sumo Logic</a></h5> 
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-05-02</p>
 <hr/>
@@ -429,7 +429,7 @@ affect?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/sumologic/jobs/1647428'>Job Application for Security, Compliance and Privacy Analyst at Sumo Logic</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sumologic/jobs/1647428'>Job Application for Security, Compliance and Privacy Analyst at Sumo Logic</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-28</p>
 <hr/>
